// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Card /> > BackgroundCallout story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-call-out_f66b11 w-[450px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <div
          class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
        >
          Recommended for you
        </div>
        <h3
          class="_text_b3eba3 _text--title-lg_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
        >
          Question of the day
        </h3>
        <div
          class="_text_b3eba3 _text--body-md_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="_header__action_f66b11"
      >
        <div
          class="_menu_33ee5b"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:rp:"
            type="button"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo my-4"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="_button-group_db62b8 _button-group--horizontal_db62b8"
      >
        <button
          class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
          type="button"
        >
          <span
            class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
          >
            Primary
          </span>
        </button>
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > CancelMembership story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[450px]"
  >
    <div
      class="_card__header_f66b11 _header--size-sm_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <h3
          class="_text_b3eba3 _text--title-sm_b3eba3 _header__title_f66b11 _header--size-sm_f66b11"
        >
          Cancel membership?
        </h3>
        <div
          class="_text_b3eba3 _text--body-xs_b3eba3 _header__sub-title_f66b11 _header--size-sm_f66b11"
        >
          We're sad to see you go
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <p
        class="_text_b3eba3 _text--body-sm_b3eba3 py-4"
      >
        Lorem ipsum dolor sit amet consectetur. Id pretium consequat consequat aliquam arcu
      </p>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="_button-group_db62b8 _button-group--horizontal_db62b8"
      >
        <button
          class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-critical_0829c1"
          type="button"
        >
          <span
            class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1"
          >
            Confirm cancellation
          </span>
        </button>
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > CheckboxCards story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="gap-spacing-size-1 flex"
  >
    <label
      class="_card__behavior-label_f66b11"
      for=":rv:"
    >
      <div
        class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-interactive_f66b11 _card--has-behavior_f66b11 w-[450px]"
      >
        <div
          class="_card__header_f66b11 _header--size-md_f66b11"
        >
          <div
            class="_header__text_f66b11"
          >
            <div
              class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
            >
              Recommended for you
            </div>
            <h3
              class="_text_b3eba3 _text--title-lg_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
            >
              Question of the day
            </h3>
            <div
              class="_text_b3eba3 _text--body-md_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="_card__body_f66b11"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="_card__footer_f66b11"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="_card__top-stripe_f66b11 _top-stripe--medium_f66b11"
        />
        <input
          class="_card__behavior-input_f66b11"
          id=":rv:"
          type="checkbox"
        />
      </div>
    </label>
    <label
      class="_card__behavior-label_f66b11"
      for=":r10:"
    >
      <div
        class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-interactive_f66b11 _card--has-behavior_f66b11 w-[450px]"
      >
        <div
          class="_card__header_f66b11 _header--size-md_f66b11"
        >
          <div
            class="_header__text_f66b11"
          >
            <div
              class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
            >
              Recommended for you
            </div>
            <h3
              class="_text_b3eba3 _text--title-lg_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
            >
              Question of the day
            </h3>
            <div
              class="_text_b3eba3 _text--body-md_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="_card__body_f66b11"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="_card__footer_f66b11"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="_card__top-stripe_f66b11 _top-stripe--medium_f66b11"
        />
        <input
          class="_card__behavior-input_f66b11"
          id=":r10:"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Card /> > Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[450px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <div
          class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
        >
          New data set
        </div>
        <h3
          class="_text_b3eba3 _text--title-lg_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
        >
          Text Complexity
        </h3>
        <div
          class="_text_b3eba3 _text--body-md_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="_header__action_f66b11"
      >
        <div
          class="_menu_33ee5b"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:r3:"
            type="button"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11 pb-spacing-size-5 pt-spacing-size-2"
    >
      <p
        class="_text_b3eba3 _text--title-md_b3eba3 pb-spacing-size-half"
      >
        Title text
      </p>
      <p
        class="_text_b3eba3 _text--body-md_b3eba3"
      >
        Lorem ipsum dolor sit amet consectetur. Id pretium consequat consequat aliquam arcu lacus semper lectus proin. Turpis dolor tincidunt vehicula egestas suspendisse senectus enim. Quam euismod orci commodo aliquet vestibulum egestas amet mi. Iaculis pulvinar aenean duis justo pretium aenean.
      </p>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="_button-group_db62b8 _button-group--horizontal_db62b8"
      >
        <button
          class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
          type="button"
        >
          <span
            class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
          >
            Primary action
          </span>
        </button>
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > IsInteractive story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-interactive_f66b11 w-[450px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <div
          class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
        >
          New data set
        </div>
        <h3
          class="_text_b3eba3 _text--title-lg_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
        >
          Text Complexity
        </h3>
        <div
          class="_text_b3eba3 _text--body-md_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="_header__action_f66b11"
      >
        <div
          class="_menu_33ee5b"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:ra:"
            type="button"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11 pb-spacing-size-5 pt-spacing-size-2"
    >
      <p
        class="_text_b3eba3 _text--title-md_b3eba3 pb-spacing-size-half"
      >
        Title text
      </p>
      <p
        class="_text_b3eba3 _text--body-md_b3eba3"
      >
        Lorem ipsum dolor sit amet consectetur. Id pretium consequat consequat aliquam arcu lacus semper lectus proin. Turpis dolor tincidunt vehicula egestas suspendisse senectus enim. Quam euismod orci commodo aliquet vestibulum egestas amet mi. Iaculis pulvinar aenean duis justo pretium aenean.
      </p>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="_button-group_db62b8 _button-group--horizontal_db62b8"
      >
        <button
          class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
          type="button"
        >
          <span
            class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
          >
            Primary action
          </span>
        </button>
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > RadioCards story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="gap-spacing-size-1 flex"
  >
    <label
      class="_card__behavior-label_f66b11"
      for=":rt:"
    >
      <div
        class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-interactive_f66b11 _card--has-behavior_f66b11 w-[450px]"
      >
        <div
          class="_card__header_f66b11 _header--size-md_f66b11"
        >
          <div
            class="_header__text_f66b11"
          >
            <div
              class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
            >
              Recommended for you
            </div>
            <h3
              class="_text_b3eba3 _text--title-lg_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
            >
              Question of the day
            </h3>
            <div
              class="_text_b3eba3 _text--body-md_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="_card__body_f66b11"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="_card__footer_f66b11"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="_card__top-stripe_f66b11 _top-stripe--medium_f66b11"
        />
        <input
          class="_card__behavior-input_f66b11"
          id=":rt:"
          name="test"
          type="radio"
        />
      </div>
    </label>
    <label
      class="_card__behavior-label_f66b11"
      for=":ru:"
    >
      <div
        class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-interactive_f66b11 _card--has-behavior_f66b11 w-[450px]"
      >
        <div
          class="_card__header_f66b11 _header--size-md_f66b11"
        >
          <div
            class="_header__text_f66b11"
          >
            <div
              class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
            >
              Recommended for you
            </div>
            <h3
              class="_text_b3eba3 _text--title-lg_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
            >
              Question of the day
            </h3>
            <div
              class="_text_b3eba3 _text--body-md_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="_card__body_f66b11"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="_card__footer_f66b11"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="_card__top-stripe_f66b11 _top-stripe--medium_f66b11"
        />
        <input
          class="_card__behavior-input_f66b11"
          id=":ru:"
          name="test"
          type="radio"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Card /> > WhileDragging story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-dragging-true_f66b11 w-[450px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <div
          class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
        >
          New data set
        </div>
        <h3
          class="_text_b3eba3 _text--title-lg_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
        >
          Text Complexity
        </h3>
        <div
          class="_text_b3eba3 _text--body-md_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="_header__action_f66b11"
      >
        <div
          class="_menu_33ee5b"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:r14:"
            type="button"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11 pb-spacing-size-5 pt-spacing-size-2"
    >
      <p
        class="_text_b3eba3 _text--title-md_b3eba3 pb-spacing-size-half"
      >
        Title text
      </p>
      <p
        class="_text_b3eba3 _text--body-md_b3eba3"
      >
        Lorem ipsum dolor sit amet consectetur. Id pretium consequat consequat aliquam arcu lacus semper lectus proin. Turpis dolor tincidunt vehicula egestas suspendisse senectus enim. Quam euismod orci commodo aliquet vestibulum egestas amet mi. Iaculis pulvinar aenean duis justo pretium aenean.
      </p>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="_button-group_db62b8 _button-group--horizontal_db62b8"
      >
        <button
          class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
          type="button"
        >
          <span
            class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
          >
            Primary action
          </span>
        </button>
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > WithCustomizedHeader story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[450px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11 mb-spacing-size-2"
    >
      <div
        class="_header__custom_f66b11"
      >
        Displaying 
        <strong>
          some text
        </strong>
         with 
        <em>
          mixed formatting
        </em>
        .
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > WithSmallFullHeaderAndIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[450px]"
  >
    <div
      class="_card__header_f66b11 _header--size-sm_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <div
          class="_text_b3eba3 _text--overline-sm_b3eba3 _header__eyebrow_f66b11 _header--size-sm_f66b11"
        >
          New data set
        </div>
        <h3
          class="_text_b3eba3 _text--title-sm_b3eba3 _header__title_f66b11 _header--size-sm_f66b11"
        >
          Text Complexity
        </h3>
        <div
          class="_text_b3eba3 _text--body-xs_b3eba3 _header__sub-title_f66b11 _header--size-sm_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="_header__action_f66b11"
      >
        <div
          class="_menu_33ee5b"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:rh:"
            type="button"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;
